# webapp4

./: .env.development  .env.production  .env.staging  .gitignore  AI_DEVELOPER_GUIDE.md  App.tsx  CDN_IMPLEMENTATION.md  COMPREHENSIVE_FIX_VERIFICATION_REPORT.md  DEPLOYMENT.md  DOCUMENTATION_TESTING_SUMMARY.md  DOCUMENTATION_TEST_REPORT.md  GSI_INITIALIZATION_FIX_SUMMARY.md  README.md  ROLLBACK_PLANS.md  SUCCESS_METRICS.md  SUGGESTIONS.md  babel.config.cjs  benchmark_cpp_image_processor.js  benchmark_image_processing.js  benchmark_results_2025-12-07T02-07-59-942Z.json  benchmark_results_2025-12-07T02-11-02-683Z.json  benchmark_results_2025-12-07T02-23-43-028Z.json  cdn-config.js  cicd-config.js  comprehensive_fix_verification.test.js  comprehensive_improvement_plan.md  constants.ts  cpp_benchmark_results_2025-12-07T18-10-21-035Z.json  cpp_benchmark_results_2025-12-07T18-13-49-330Z.json  cpp_benchmark_results_2025-12-07T18-16-48-324Z.json  cpp_integration_strategy.md  deploy.js  deploy.sh  ecosystem.config.cjs  generate_test_images.js  gpu_benchmark.js  gpu_image_processing_roadmap.md  hack_integration_strategy.md  index.html  index.tsx  (+44 more)
components/: AdminDashboard.tsx  AuthManager.tsx  BetaAccessModal.tsx  BetaBadge.tsx  BetaFeedbackModal.tsx  BetaSettings.tsx  CameraCapture.tsx  ContactModal.tsx  ContactSection.tsx  CreateEventModal.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  EventGallery.tsx  FAQSection.tsx  FeaturesSection.tsx  FooterSection.tsx  GPURenderer.tsx  GoogleButtonErrorBoundary.tsx  GuestLoginModal.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingPage.tsx  LazyComponents.tsx  LazyImage.tsx  LiveSlideshow.tsx  LoadingSkeleton.tsx  MediaManager.tsx  MediaReviewModal.tsx  MobilePerformanceTest.tsx  Navigation.tsx  OfflineBanner.tsx  PWAInstallPrompt.tsx  PerformanceDashboard.tsx  PricingCard.tsx  ReloadPrompt.tsx  ShareModal.tsx  ShareTargetHandler.tsx  Skeleton.tsx  StudioSection.tsx  StudioSettingsModal.tsx  (+6 more)
context/: MobilePerformanceContext.tsx
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  CODING_STANDARDS_CPP.md  README.md  binding.gyp  package-lock.json
cpp/include/: image_processor.h
cpp/proto/: image_service.proto
cpp/src/: binding.cc  image_processor.cc  image_service.cc
docs-website-dist/: index.html
rust/image_processor/: Cargo.toml
rust/image_processor/src/: lib.rs
(+343 files in other folders)
